# ShadPs4Manager

./: .gitignore  BUILD.md  CLEANUP_COMPLETE.md  CMakeLists.txt  COMPLETE_SUMMARY.md  DEPLOYMENT.md  DOUBLE_FREE_FIX.md  EXTRACTION_BUG_FIX.md  EXTRACTION_SUCCESS.md  FINAL_STATUS.md  GITHUB_ACTIONS_FIX.md  GUI_PROGRESS_DISPLAY.md  GUI_SEGFAULT_FIX.md  LICENSE  MEMORY_CORRUPTION_FIX.md  NEW_FEATURES.md  README.md  README.md.old  RELEASE_SUMMARY.md  build.sh  clean.sh  extract_driveclub.sh  test_extract.cpp  test_gui_fix.sh  test_qprocess  test_qprocess.cpp
.github/prompts/: prompt.prompt.md
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  debug-qt-modules.yml  release.yml  test-builds.yml
docs/: README.md  README.md.old  index.html
docs-archive/: ADMIN_GUIDE.md  BUILD.md  CHANGELOG_NEW_FEATURES.md  DOCUMENTATION_COMPLETE.md  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  RECORD_KEEPING.md  REGISTRATION_SYSTEM.md
docs-archive/manager-gui/: BUILD.md  README.md
docs-archive/pkg-extractor/: BUILD.md  README.md
docs-archive/unlock-generator/: BUILD.md  README.md
docs/assets/: style.css
scripts/: build.sh  create-release.sh  test-paypal.sh  trigger-release.sh
src/cli/: main.cpp  pkg_extractor.cpp  simple_main.cpp
src/common/: assert.h  endian.h  io_file.cpp  ntapi.h  scm_rev.cpp.in
src/core/: update_merger.cpp  update_merger.h
src/core/crypto/: crypto.cpp
src/core/file_format/: pkg.cpp  pkg.h  pkg_optimized.cpp  pkg_optimized.h
src/gui/: credential_manager.cpp  credential_manager.h  downloads_folder.cpp  downloads_folder.h  game_library.cpp  game_library.h  gamecard.cpp  gamecard.h  igdbservice.cpp  installation_folder.cpp  installation_folder.h  param_sfo.cpp  param_sfo.h  settings.cpp  settings.h  settings_page.cpp  settings_page.h  working_gui.cpp  working_gui_backup.cpp  working_gui_old.cpp
src/manager-gui/: common_types.h  credential_manager.cpp  credential_manager.h  downloads_folder.cpp  game_library.h  igdbservice.h  installation_folder.cpp  installation_folder.h  settings.cpp  settings.h  settings_page.cpp  settings_page.h  welcome_tab.cpp  welcome_tab.h  working_gui.cpp
src/pkg_tool/: lib.cpp  original_lib.h
src/unlock-generator/: unlock_code_generator.cpp
